examples/test/testpolicy11469.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11469
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key5: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value33
          key49: value11
      podSelector:
        matchLabels:
          key0: value47
          key22: value49
          key15: value5
